This commit will make links open in a new tab.

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
       <h1>Hi, I’m Zachary</h1>
       <img src="img/portland.jpg" width="100%">
       <div class="btn btn-small">
-        <a href="https://www.github.com/zneu" title="GitHub"><img src="img/github.png" width="75%"></a>
+        <a href="https://www.github.com/zneu" title="GitHub" target="_blank"><img src="img/github.png" width="75%"></a>
       </div>
       <div class="btn btn-small">
-        <a href="https://www.instagram.com/xacharyrobert" title="Soundcloud"><img src="img/insta.png" width="75%"></a>
+        <a href="https://www.instagram.com/xacharyrobert" title="Soundcloud" target="_blank"><img src="img/insta.png" width="75%"></a>
         </a>
       </div>
       <div class="btn btn-small">
-        <a href="https://www.soundcloud.com/xacharyrobert" title="Soundcloud"><img src="img/soundcloud.png" width="75%"></a>
+        <a href="https://www.soundcloud.com/xacharyrobert" title="Soundcloud" target="_blank"><img src="img/soundcloud.png" width="75%"></a>
         </a>
       </div>
     </center>
