This commit will fix a typo.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </header>
   <main>
     <center>
-      <p>I am a creative individual with aspriations higher than Mt. Everest. I am from rainy Portland, Oregon and I love to cycle, explore the outdoors, play music, and code.</p>
+      <p>I am a creative individual with aspirations higher than Mt. Everest. I am from rainy Portland, Oregon and I love to cycle, explore the outdoors, play music, and code.</p>
       <img src="img/zneu.jpg" width="100%">
       <p>Thank you for stopping by my page.</p>
     </center>
