--- a/index.html
+++ b/index.html
@@ -1,97 +1,118 @@
 <!DOCTYPE html>
-<html >
-<head>
-  <meta charset="UTF-8">
-  <title>A Pen by  Zachary</title>
-  <title>Zachary Neumann - The More you Know</title>
-  
-  <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
-<link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>A Pen by  Zachary</title>
+    <title>Zachary Neumann - The More you Know</title>
+    <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
+  <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
 
-      <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style.css">
+  </head>
 
-  
-</head>
 
-<body>
   <body id="page-top">
-  <!-- Navigation -->
-  <nav class="navbar-default navbar-fixed-top">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-        <a class="navbar-brand" href="#"> <b>ZACHARY NEUMANN</b></a>
-      </div>
+    <!-- Navigation -->
+    <nav class="navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+          <a class="navbar-brand" href="#"> <b>ZACHARY NEUMANN</b></a>
+        </div>
 
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#page-top">About <span class="sr-only">(current)</span></a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </div>
-      <!-- /.navbar-collapse -->
-    </div>
-    <!-- /.container-fluid -->
-  </nav>
-  <!-- Main Content -->
-  <main>
-    <header>
-      <div class="header-text">
-        <h1>About</h1>
-        <p>Team Treehouse and Free Code Camp student. Portland State University B.S. in Environmental Science and Management with a minor in Geographic Information Systems. Experience working for federal government as both an employee and contractor.</p>
-        <hr>
-        <p>Front End Development - Python - GIS Analyst - Information Technologies</p>
-      </div>
-      <center><img src="http://zacharyneumann.com/img/zneu.jpg" alt="A picture of Zachary while backing in the Diamond Peak Wilderness in the Dseschutes National Forest in Oregon" class="img-circle img-header"></center>
-    </header>
-    <section id="portfolio">
-      <h1>Portfolio</h1>
-      <hr class="hr-section">
-      <img class="img-responsive" src="http://zacharyneumann.com/img/portland.jpg"><br>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus tempor pharetra arcu egestas commodo. Quisque eleifend lorem diam, in porttitor sapien eleifend in. In hac habitasse platea dictumst. Sed cursus tellus sed porttitor malesuada.
-        Curabitur porta lorem scelerisque elit malesuada, id facilisis velit sollicitudin. Nam vel elementum tellus. Vestibulum non risus tortor. Nulla tincidunt et ante nec semper.</p>
-    </section>
-    <section id="contact">
-      <h1>Contact</h1>
-      <hr class="hr-section">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus tempor pharetra arcu egestas commodo. Quisque eleifend lorem diam, in porttitor sapien eleifend in. In hac habitasse platea dictumst. Sed cursus tellus sed porttitor malesuada. Curabitur
-        porta lorem scelerisque elit malesuada, id facilisis velit sollicitudin. Nam vel elementum tellus. Vestibulum non risus tortor. Nulla tincidunt et ante nec semper.</p>
-    </section>
-  </main>
-  <!-- Footer -->
-  <footer id="web">
-    <div class="footer-above">
-      <div class="row">
-        <div class="col-md-6">
-          <h3>About this page:</h3>
-            <p>Made with <i class="fa fa-heart" aria-hidden="true"></i> and <i class="fa fa-music" aria-hidden="true"></i></p>
-              <p>by Zachary Neumann</p></h4>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#page-top">About <span class="sr-only">(current)</span></a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
         </div>
-        <div class="col-md-6">
-          <h3>On the web:</h3>
-          <i class="fa fa-camera-retro fa-2x"></i>
-          <i class="fa fa-facebook fa-2x" aria-hidden="true"></i>
-          <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
-          <i class="fa fa-soundcloud fa-2x" aria-hidden="true"></i>  
-          <i class="fa fa-github fa-2x" aria-hidden="true"></i>
+        <!-- /.navbar-collapse -->
+      </div>
+      <!-- /.container-fluid -->
+    </nav>
+    <!-- Main Content -->
+    <main>
+      <!-- Header -->
+      <header>
+        <div class="header-text">
+          <h1>About</h1>
+          <p>Team Treehouse and Free Code Camp student. Portland State University B.S. in Environmental Science and Management with a minor in Geographic Information Systems. Experience working for federal government as both an employee and contractor.</p>
+          <hr>
+          <center><p>Front End Development - Python - GIS Analyst - Information Technologies - ArcGis - ArcPy - ArcGIS Online </p></center>
+        </div>
+        <center><img src="http://zacharyneumann.com/img/zneu.jpg" alt="A picture of Zachary while backing in the Diamond Peak Wilderness in the Dseschutes National Forest in Oregon" class="img-circle img-header"></center>
+      </header>
+
+      <!-- Portfolio -->
+      <section id="portfolio">
+        <h1>Portfolio</h1>
+        <hr class="hr-section">
+
+        <img class="img-responsive" src="http://zacharyneumann.com/img/portland.jpg"><br>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-2">
+              <h2>Github</h2>
+              <a href="https://www.github.com/zneu" target="blank"><i class="fa fa-github fa-5x" aria-hidden="true"></i></a>
+            </div>
+            <div class="col-md-4">
+              <h2>LinkedIn</h2>
+              <a href="https://www.linkedin.com/in/zneumann" target="blank"><i class="fa fa-linkedin fa-5x" aria-hidden="true"></i></a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Contact -->
+      <section id="contact">
+        <h1>Contact</h1>
+        <hr class="hr-section">
+        <p>Thank you for viewing my page. Please feel free to contact me at either my github or my LinkedIn.</p>
+        <p></p>
+      </section>
+    </main>
+    <!-- close main -->
+    <!--  Footer -->
+    <footer id="web">
+      <div class="footer-above">
+        <div class="row">
+          <div class="col-md-6">
+            <h3>About this page:</h3>
+              <p>Made with <i class="fa fa-heart" aria-hidden="true"></i> and <i class="fa fa-music" aria-hidden="true"></i></p>
+                <p>by <a href="https://codepen.io/zneu/pen/KaodoP">Zachary Neumann</a></p></h4>
+          </div>
+          <div class="col-md-6">
+            <h3>On the web:</h3>
+            <a href="https://www.github.com/zneu" target="_blank">
+              <i class="fa fa-github fa-2x" aria-hidden="true"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/zneumann" target="_blank">
+              <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
+            </a>
+            <a href="https://www.instagram.com/xacharyrobert/" target="_blank">
+              <i class="fa fa-camera-retro fa-2x" aria-hidden="true"></i>
+            </a>
+            <a href="https://soundcloud.com/xacharyrobert" target="_blank">
+              <i class="fa fa-soundcloud fa-2x" aria-hidden="true"></i>
+            </a>
+
+          </div>
         </div>
       </div>
-    </div>
-    <div class="text-center footer-below">
-       Zachary Neumann © 2017 - The more you know!
-    </div>
-  </footer>
-</body>
+      <div class="text-center footer-below">
+         Zachary Neumann © 2017 - The more you know!
+      </div>
+    </footer>
+    <!-- close footer -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
-
-  
-</body>
+  </body>
 </html>
