Added content to the portfolio section. Updated the bio.

--- a/index.html
+++ b/index.html
@@ -43,32 +43,25 @@
       <header>
         <div class="header-text">
           <h1>About</h1>
-          <p>Team Treehouse and Free Code Camp student. Portland State University B.S. in Environmental Science and Management with a minor in Geographic Information Systems. Experience working for federal government as both an employee and contractor.</p>
+          <p>Zachary Neumann graduated Portland State University with a B.S. in Environmental Science and Management and a minor in Geographic Information Systems. Currently a solutions engineer for the United States Forest Service, he configures and develops <a href="https://goo.gl/iS4WmJ" target="_blank">Talking Points Collaborative Mapping</a>, the agencies main public participatory GIS application.  Zachary seeks to help bridge the communication gap between people and government to bring a voice to those who have not been heard.</p>
           <hr>
-          <center><p>Front End Development - Python - GIS Analyst - Information Technologies - ArcGis - ArcPy - ArcGIS Online </p></center>
+          <center><p>Solutions Architect - Front End Development - Python - GIS Analyst - ArcGIS API for Python - ArcPy - ArcGIS Online </p></center>
         </div>
         <center><img src="http://zacharyneumann.com/img/zneu.jpg" alt="A picture of Zachary while backing in the Diamond Peak Wilderness in the Dseschutes National Forest in Oregon" class="img-circle img-header"></center>
+        <center><img class="img-responsive" src="http://zacharyneumann.com/img/portland.jpg" width="800px"><br></center>
       </header>
 
       <!-- Portfolio -->
       <section id="portfolio">
         <h1>Portfolio</h1>
         <hr class="hr-section">
-
-        <img class="img-responsive" src="http://zacharyneumann.com/img/portland.jpg"><br>
         <div class="container">
           <div class="row">
-            <div class="col-md-2"></div>
-            <div class="col-md-2">
-              <h2>Github</h2>
-              <a href="https://www.github.com/zneu" target="blank"><i class="fa fa-github fa-5x" aria-hidden="true"></i></a>
-            </div>
-            <div class="col-md-4">
-              <h2>LinkedIn</h2>
-              <a href="https://www.linkedin.com/in/zneumann" target="blank"><i class="fa fa-linkedin fa-5x" aria-hidden="true"></i></a>
-            </div>
-          </div>
+            <br><br>
+            <div class="col-md-5"><a href="http://www.zacharyneumann.com/weather"><h2>Weather API</h2><img src="img/weather_thumb.png" width="400px"></a></div>
+            <div class="col-md-5"><a href="http://www.zacharyneumann.com/wikipedia"><h2>Wikipedia API</h2><img src="img/wikipedia_thumb.png" width="400px"></a></div>
         </div>
+      </div>
       </section>
 
       <!-- Contact -->
@@ -76,7 +69,17 @@
         <h1>Contact</h1>
         <hr class="hr-section">
         <p>Thank you for viewing my page. Please feel free to contact me at either my github or my LinkedIn.</p>
-        <p></p>
+        <div id="icons">
+          <div class="row">
+            <div class="col-md-3"></div>
+            <div class="col-md-3">
+              <a href="https://www.github.com/zneu" target="blank"><i class="fa fa-github fa-5x" aria-hidden="true"></i></a>
+            </div>
+            <div class="col-md-3">
+              <a href="https://www.linkedin.com/in/zneumann" target="blank"><i class="fa fa-linkedin fa-5x" aria-hidden="true"></i></a>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <!-- close main -->
