Add Talking points into portfolio

--- a/index.html
+++ b/index.html
@@ -55,13 +55,32 @@
       <section id="portfolio">
         <h1>Portfolio</h1>
         <hr class="hr-section">
-        <div class="container">
+        <div class="container-fluid">
           <div class="row">
             <br><br>
-            <div class="col-md-5"><a href="http://www.zacharyneumann.com/weather"><h2>Weather API</h2><img src="img/weather_thumb.png" width="400px"></a></div>
-            <div class="col-md-5"><a href="http://www.zacharyneumann.com/wikipedia"><h2>Wikipedia API</h2><img src="img/wikipedia_thumb.png" width="400px"></a></div>
+            <div class="col-md-5">
+              <a href="https://usfs.maps.arcgis.com/apps/MapSeries/index.html?appid=7bc1c9bc256f49eb850e41773fafd025"><h2>Talking Points</h2>
+              <img src="img/TPCM_thumb.png" width="400px" class="img-thumbnail"></a>
+            </div>
+            <div class="col-md-2"></div>
+            <div class="col-md-5">
+              <a href="http://www.zacharyneumann.com/wikipedia"><h2>Wikipedia API</h2><img src="img/wikipedia_thumb.png" width="400px" class="img-thumbnail"></a>
+            </div>
+
+          </div>
         </div>
-      </div>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-md-5">
+              <a href="http://www.zacharyneumann.com/weather"><h2>Weather API</h2><img src="img/weather_thumb.png" width="400px" class="img-thumbnail"></a>
+            </div>
+          <div class="col-md-2"></div>
+          <div class="col-md-5">
+          </div>
+            </div>
+          </div>
+
+        </div>
       </section>
 
       <!-- Contact -->
@@ -69,7 +88,7 @@
         <h1>Contact</h1>
         <hr class="hr-section">
         <p>Thank you for viewing my page. Please feel free to contact me at either my github or my LinkedIn.</p>
-        <div id="icons">
+        <div id="icons" class="container-fluid">
           <div class="row">
             <div class="col-md-3"></div>
             <div class="col-md-3">
@@ -78,7 +97,10 @@
             <div class="col-md-3">
               <a href="https://www.linkedin.com/in/zneumann" target="blank"><i class="fa fa-linkedin fa-5x" aria-hidden="true"></i></a>
             </div>
+            </div class="col-md-3"></div>
           </div>
+          <h2>Resume</h2><a href="https://goo.gl/jXGfxn">
+          <i class="fa fa-newspaper-o fa-5x" aria-hidden="true"></i></a>
         </div>
       </section>
     </main>
