Changed soundcloud to Akrizae

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <a href="https://www.instagram.com/xacharyrobert/" target="_blank">
               <i class="fa fa-camera-retro fa-2x" aria-hidden="true"></i>
             </a>
-            <a href="https://soundcloud.com/xacharyrobert" target="_blank">
+            <a href="https://soundcloud.com/akrizae" target="_blank">
               <i class="fa fa-soundcloud fa-2x" aria-hidden="true"></i>
             </a>
 
