Changed index.html, removed portfoloio

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </header>
 
       <!-- Portfolio -->
-      <section id="portfolio">
+      <!-- <section id="portfolio">
         <h1>Portfolio</h1>
         <hr class="hr-section">
         <div class="container-fluid">
@@ -81,7 +81,7 @@
           </div>
 
         </div>
-      </section>
+      </section> -->
 
       <!-- Contact -->
       <section id="contact">
