Removed width and height

--- a/tour.html
+++ b/tour.html
@@ -1,1 +1,1 @@
-<iframe src="https://www.google.com/maps/d/embed?mid=1f2nZzZPCGCN3r3tn-ud_sJ3zz5TCkx2J" width="640" height="480"></iframe>
+<iframe src="https://www.google.com/maps/d/embed?mid=1f2nZzZPCGCN3r3tn-ud_sJ3zz5TCkx2J"></iframe>
