--- a/tour.html
+++ b/tour.html
@@ -1,1 +1,1 @@
-<iframe src="https://www.google.com/maps/d/embed?mid=1f2nZzZPCGCN3r3tn-ud_sJ3zz5TCkx2J"></iframe>
+<iframe src="https://www.google.com/maps/d/embed?mid=1f2nZzZPCGCN3r3tn-ud_sJ3zz5TCkx2J" width="100%" height="100%"></iframe>
