Adds headers and basic HTML elements

--- a/tour.html
+++ b/tour.html
@@ -1,1 +1,26 @@
-<iframe src="https://www.google.com/maps/d/embed?mid=1f2nZzZPCGCN3r3tn-ud_sJ3zz5TCkx2J" width="100%" height="100%"></iframe>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Zachary Neumann - The More you Know</title>
+    <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
+  <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
+
+        <link rel="stylesheet" href="css/style.css">
+  </head>
+
+  <body id="page-top"><!DOCTYPE html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Zachary Neumann - The More you Know</title>
+    <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
+  <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
+
+        <link rel="stylesheet" href="css/style.css">
+  </head>
+
+
+  <body>
+    <iframe src="https://www.google.com/maps/d/embed?mid=1f2nZzZPCGCN3r3tn-ud_sJ3zz5TCkx2J" width="100%" height="100%"></iframe>
+  </body>
+</html>
